--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "swiper": "^11.1.15",
         "webpack-dev-server": "^5.2.0"
     }
 }
