--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "\"plants shop website\"",
     "main": "main.js",
+    "homepage": "https://lizaaaaaaaaaaaa.github.io/plantique",
     "scripts": {
         "start": "webpack serve",
         "build": "webpack",
-        "deploy": "gh-pages -d dist"
+        "deploy": "npm run build && gh-pages -d dist"
     },
     "keywords": [
         "plants",
@@ -18,6 +19,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "css-loader": "^7.1.2",
+        "gh-pages": "^6.2.0",
         "html-loader": "^5.1.0",
         "html-webpack-plugin": "^5.6.3",
         "postcss": "^8.4.49",
